@@ -1,3 +1,7 @@
+2003-06-18  William Jon McCann  <mccann@jhu.edu>
+
+	* glines.c: Include string.h.
+
 2003-06-17  William Jon McCann  <mccann@jhu.edu>
 
 	* glines.h:
